--- a/SpringBoot2WarSample/src/main/resources/static/index.html
+++ b/SpringBoot2WarSample/src/main/resources/static/index.html
@@ -146,6 +146,7 @@
         </tr>
     </thead>
     <!-- tbody 태그 필요 없다. -->
+    <!-- https://datatables.net/examples/server_side/defer_loading.html 초기 로딩 시는 tbody에 값 세팅. 이후에는 ajax로 하는 방법. "deferLoading": 100 형태로 지정(전체 카운트 수) -->
 </table>
 </body>
 </html>
